<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:overScrollMode="never"
    android:scrollbars="none"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendOtpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/received_icon"
        android:contentDescription="@string/app_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otpverification"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/we_will_send_you_an_otp_on_this_mobile_number"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/enter_mobile_number"
            android:gravity="center"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/_91"
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/inputMobile"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:hint="@string/_1234567890"
                android:background="@null"
                android:importantForAutofill="no"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp"
            android:background="@color/colorDivider"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/buttonGetOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/get_otp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:background="@drawable/background_button"
                android:textStyle="bold"/>
            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>


    </LinearLayout>

</ScrollView>