<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyOtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/received_icon"
            android:contentDescription="@string/app_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otpverification"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enter_the_otp_sent_to_you"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/textMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/inputCode1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
            <EditText
                android:id="@+id/inputCode2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_marginStart="4dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
            <EditText
                android:id="@+id/inputCode3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_marginStart="4dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
            <EditText
            android:id="@+id/inputCode4"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:layout_marginStart="4dp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>
            <EditText
                android:id="@+id/inputCode5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_marginStart="4dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
            <EditText
                android:id="@+id/inputCode6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:layout_marginStart="4dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

        </LinearLayout>\
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_receive_the_otp"
                android:textSize="16sp"
                android:textColor="@color/colorTextSecondary"/>
            <TextView
                android:id="@+id/resendOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"/>




        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/buttonVerifyOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="verify"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:background="@drawable/background_button"
                android:textStyle="bold"/>
            <ProgressBar
                android:id="@+id/progressbar1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>


    </LinearLayout>




</ScrollView>